# zenyx

./: .gitignore  DEPLOYMENT_GUIDE_TPU_V5E8.md  DEPLOY_NOW.sh  FINAL_VERIFICATION.sh  INDEX.md  INSTALLATION_AND_SETUP.md  INSTALLATION_IMPORTS_SUMMARY.md  PRODUCTION_READY.md  PROJECT_COMPLETE.md  README.md  README_ZENYX_V2.md  REPO_STRUCTURE.txt  SETUP_COMPLETE.md  START_HERE.md  START_HERE_INSTALLATION.txt  TEST_SUITE_README.md  TRAINING_AUDIT_COMPLETE.md  TRAINING_BEST_PRACTICES.md  TRAINING_COMMANDS_CHEATSHEET.py  TRAINING_GUIDE.md  TRAINING_GUIDE_COMPLETE.md  TRAINING_QUICK_REFERENCE.md  TRAINING_SCRIPTS_INDEX.md  TRAINING_START_HERE.md  UPGRADE_AND_VERIFICATION_COMPLETE.md  VALIDATION_REPORT.md  ZENYX_2_0_DELIVERABLES.txt  ZENYX_2_0_PHASE_1_SUMMARY.md  ZENYX_2_0_QUICK_START.py  ZENYX_2_0_README.md  ZENYX_FOUR_PILLARS_COMPLETE.md  ZENYX_GPU_CPU_IMPLEMENTATION_SUMMARY.md  ZENYX_GPU_CPU_TRAINING_GUIDE.md  ZENYX_PRODUCTION_READY.md  ZENYX_QUICK_START.sh  ZENYX_TRAINING_SCRIPTS_UPDATE.md  ZENYX_UNIFIED_TRAINING_GUIDE.md  ZENYX_V2_COMPLETE_GUIDE.py  ZENYX_V2_DELIVERABLES.txt  ZENYX_V2_FINAL_SUMMARY.md  (+9 more)
.orchids/: orchids.json
checkpoints/: step_10.pt
checkpoints_minimal/: step_16.pt
ckpt/: step_16.pt
ckpt_loss_track/: step_16.pt
examples/: 01_beginner_cpu_training.py  02_intermediate_finetuning.py  03_expert_tpu_v5e8_training.py
test/: QUICK_START.py  comprehensive_e2e_validation.py  memory_analysis_single_tpu.py  realistic_memory_analysis.py  test_1t_1m_model.py  test_cpu_32k_context.py  test_cpu_8k_context.py  test_gpu_128k_context.py  test_memory_management.py  test_single_tpu_trainer.py  test_tpu_1m_context.py  validate_hardware.py  validate_single_tpu.py  validate_zenyx_four_pillars.py
tests/: conftest.py  test_activation_checkpoint.py  (+19 more)
(+106 files in other folders)
