[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenyx"
version = "1.0.0"
description = "Hardware-agnostic, self-managing distributed LLM training runtime. Never OOM."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Anamitra Sarkar"},
]
keywords = [
    "deep-learning",
    "distributed-training",
    "llm",
    "gpu",
    "tpu",
    "memory-management",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.5.0",
    "triton>=3.0.0",
    "numpy>=1.26.0",
    "aiofiles>=23.0.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
tpu = [
    "jax[tpu]>=0.4.20",
]
full = [
    "jax[tpu]>=0.4.20",
    "triton>=3.0.0",
    "psutil",
    "aiofiles",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/Anamitra-Sarkar/zenyx"
Repository = "https://github.com/Anamitra-Sarkar/zenyx"
Issues = "https://github.com/Anamitra-Sarkar/zenyx/issues"

[tool.setuptools.packages.find]
include = ["zenyx*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
